--- a/resources/style/landings/pages/feed/_hero.scss
+++ b/resources/style/landings/pages/feed/_hero.scss
@@ -20,23 +20,25 @@
     }
 
     &__input {
-        width: 640px;
+        width: 630px;
         height: 48px;
         left: 400px;
         top: 234px;
         background: #ffffff;
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.12), 0px 1px 3px rgba(0, 0, 0, 0.2);
         border-radius: 24px;
-        padding: 20px 35px;
+        padding: 20px 37px;
         @include breakpoints.down(sm) {
             width: 100%;
         }
     }
 
     &__clear-button {
-        top: 130px;
-        right: 370px;
         position: absolute;
+        margin-left: -30px;
+        margin-top: 12px;
+        color: rgba(0, 0, 0, 0.54);
+
         @include breakpoints.down(sm) {
             top: 115px;
             right: 24px;
@@ -46,8 +48,10 @@
 
     &__search-icon {
         position: absolute;
-        top: 131px;
-        left: 370px;
+        margin-left: 10px;
+        margin-top: 12px;
+        color: rgba(0, 0, 0, 0.54);
+
         @include breakpoints.down(sm) {
             position: absolute;
             top: 116px;
